[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"
default-run = "welcome"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "welcome"
path = "src/main.rs"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"
